@@ -2,7 +2,8 @@
 
 ## mk 0.7.2 (not yet released)
 
-(nothing yet)
+- Add `mklib.mk` function that allows a task body to call another task with
+  `mk(*task_names)`.
 
 
 ## mk 0.7.1
